--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
         <title>JakartaJS</title>
         <meta name="description" content="Jakarta Javascript Community">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-touch-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-touch-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon-180x180.png">
-        <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="/img/android-chrome-192x192.png" sizes="192x192">
-        <link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96">
-        <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
-        <link rel="manifest" href="/img/manifest.json">
-        <link rel="shortcut icon" href="/img/favicon.ico">
+        <link rel="apple-touch-icon" sizes="57x57" href="/jakartajs/img/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/jakartajs/img/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/jakartajs/img/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/jakartajs/img/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/jakartajs/img/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/jakartajs/img/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/jakartajs/img/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/jakartajs/img/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/jakartajs/img/apple-touch-icon-180x180.png">
+        <link rel="icon" type="image/png" href="/jakartajs/img/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/jakartajs/img/android-chrome-192x192.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="/jakartajs/img/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="/jakartajs/img/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="/jakartajs/img/manifest.json">
+        <link rel="shortcut icon" href="/jakartajs/img/favicon.ico">
         <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="msapplication-TileImage" content="/img/mstile-144x144.png">
-        <meta name="msapplication-config" content="/img/browserconfig.xml">
+        <meta name="msapplication-TileImage" content="/jakartajs/img/mstile-144x144.png">
+        <meta name="msapplication-config" content="/jakartajs/img/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
